--- a/.github/workflows/Compile.yml
+++ b/.github/workflows/Compile.yml
@@ -16,11 +16,14 @@ env:
   # REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_URL: https://github.com/KFERMercer/OpenWrt
   REPO_BRANCH: master
+# REPO_BRANCH: lede-17.01 --single-branch
+# REPO_BRANCH: openwrt-18.06 --single-branch
+# REPO_BRANCH: openwrt-19.07 --single-branch
+# REPO_BRANCH: openwrt-21.02 --single-branch
 # REPO_BRANCH: 21.02 --single-branch
 # REPO_BRANCH: 19.07 --single-branch
 # REPO_BRANCH: main --single-branch
-# REPO_BRANCH: openwrt-18.06 --single-branch
-# REPO_BRANCH: openwrt-21.02 --single-branch
+# REPO_BRANCH: openwrt-18.06-dev --single-branch
 # REPO_BRANCH: openwrt-18.06-k5.4 --single-branch
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
